also run on pull-requests

--- a/.github/workflows/sync_readme_to_gitlab.yml
+++ b/.github/workflows/sync_readme_to_gitlab.yml
@@ -6,6 +6,11 @@ on:
       - README.md
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+    paths:
+      - README.md
 
 jobs:
   sync-readme:
@@ -38,6 +43,7 @@ jobs:
           kramdoc -o README.adoc README.md
 
       - name: Copy README.md to GitLab repo
+        if: github.ref == 'refs/heads/main'
         env:
           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
           GITLAB_REPO: ${{ secrets.GITLAB_REPO }}
