--- a/.github/workflows/sync_readme_to_gitlab.yml
+++ b/.github/workflows/sync_readme_to_gitlab.yml
@@ -56,3 +56,10 @@ jobs:
           git add modules/ROOT/pages/guides/vaasHelmReadme.adoc
           git commit -m "Update README.adoc from GitHub"
           git push --set-upstream origin update-external-readme -o merge_request.create -o merge_request.target=develop -o merge_request.title="Update README.adoc from GitHub Vaas-Helm"
+
+      - name: Microsoft Teams Notification
+        uses: skitionek/notify-microsoft-teams@master
+        if: github.ref == 'refs/heads/main'
+        with:
+          webhook_url: ${{ secrets.TECH_WRITING_TEAMS_WEBHOOK }}
+          overwrite: "{title: `VaaS: README.md was updated and commited`, sections: [{activityTitle: 'README.md was updated', activitySubtitle: `The README.md was updated`, activityImage: 'https://adaptivecards.io/content/cats/1.png'}], themeColor: '##ffb700'}"
