--- a/.github/workflows/sync_readme_to_gitlab.yml
+++ b/.github/workflows/sync_readme_to_gitlab.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Convert README.md to AsciiDoc
         run: |
-          kramdoc -o README.adoc README.md
+          kramdoc -o README.adoc README.md --format=markdown
 
       - name: Copy README.md to GitLab repo
         if: github.ref == 'refs/heads/main'
@@ -51,9 +51,9 @@ jobs:
           git clone https://vaasHelmReadmeAutomation:${GITLAB_TOKEN}@${GITLAB_REPO}.git gitlab-repo
           cd gitlab-repo
           git checkout update-external-readme || git checkout -b update-external-readme
-          mkdir -p modules/ROOT/pages/guides
-          cp ../README.adoc modules/ROOT/pages/guides/vaasHelmReadme.adoc
-          git add modules/ROOT/pages/guides/vaasHelmReadme.adoc
+          mkdir -p modules/ROOT/partials
+          cp ../README.adoc modules/ROOT/partials/vaasHelmReadme.adoc
+          git add modules/ROOT/partials/vaasHelmReadme.adoc
           git commit -m "Update README.adoc from GitHub"
           git push --set-upstream origin update-external-readme -o merge_request.create -o merge_request.target=develop -o merge_request.title="Update README.adoc from GitHub Vaas-Helm"
 
