--- a/.github/workflows/sync_readme_to_gitlab.yml
+++ b/.github/workflows/sync_readme_to_gitlab.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Convert README.md to AsciiDoc
         run: |
-          kramdoc --format=GFM --output=README.adoc --wrap=ventilate README.md
+          kramdoc --format=GFM --output=README.adoc --wrap=none README.md
 
       - name: Copy README.md to GitLab repo
         if: github.ref == 'refs/heads/main'
