--- a/charts/vaas/templates/gateway/secret.yaml
+++ b/charts/vaas/templates/gateway/secret.yaml
@@ -1,10 +1,22 @@
-{{- if .Values.global.imagePullSecrets }}
+{{- if and (not .Values.global.imagePullSecrets) (not .Values.global.imagePullSecret)}}
 apiVersion: v1
 kind: Secret
 metadata:
   name: registry
   namespace: {{ .Release.Namespace }}
 data:
-  .dockerconfigjson: {{ required "You need to set the dockerconfigjson for the private registry" .Values.global.secret.dockerconfigjson }}
+  .dockerconfigjson: {{ required "You need to set the dockerconfigjson for the private registry" (.Values.global.secret).dockerconfigjson }}
 type: kubernetes.io/dockerconfigjson
+{{- end -}}
+{{- if or (.Values.global.imagePullSecrets) (.Values.global.imagePullSecret)}}
+{{- if (.Values.global.secret).dockerconfigjson }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: registry
+  namespace: {{ .Release.Namespace }}
+data:
+  .dockerconfigjson: {{ .Values.global.secret.dockerconfigjson }}
+type: kubernetes.io/dockerconfigjson
+{{- end -}}
 {{- end -}}
