--- a/charts/vaas/templates/gdscan/update.yaml
+++ b/charts/vaas/templates/gdscan/update.yaml
@@ -115,6 +115,7 @@ spec:
     - ports:
         - port: {{ .Values.gdscan.autoUpdate.networkPolicy.k8sApiPort }}
         - port: 443
-        - port: 53 # DNS
+        - port: 53
+          protocol: UDP
 {{- end }}
 {{- end}}
