fixes the secret handling (#58)
* fixes the secret handling

you either have to configure a dockerjsonconfig or a global.imagepullsecrets

but when you configure both, both are added to the imagepullsecrets in the deployments and stateful-sets

* refactors the secret handling to streamline it with the mini-identity-provider

* adds the DNS Port to the networkPolicy of the updater

* adjust config

* also update the mini-identity-provider dependency

--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -1,6 +1,11 @@
 global:
-  imagePullSecrets: []
+  imagePullSecrets:
+    - imagePullSecrets
+  secret:
+    dockerconfigjson: "e30K"
+    imagePullSecret: "e30K"
 
+imagePullSecret: "e30K"
 mini-identity-provider:
   issuer: "http://vaas/auth"
   enabled: true
@@ -147,6 +152,7 @@ gateway:
   gdscanUrl: "http://gdscan:8080/scan/body"
 
 gdscan:
+  imagePullSecrets: []
   replicaCount: 1
   deploymentStrategy: "RollingUpdate"
   client:
