Do not configure global.imagePullSecrets array by default

--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -1,6 +1,5 @@
 global:
-  imagePullSecrets:
-    - imagePullSecrets
+  imagePullSecrets: []
   secret:
     dockerconfigjson: "e30K"
     imagePullSecret: "e30K"
