create handling for uploadtoken via secret or providing default token

--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -59,6 +59,9 @@ cloud:
 #   tracesSampleRate: ""
 
 gateway:
+  uploadToken:
+    existingSecret: ""
+    key: ""
   ingress:
     enabled: true
     className: ""
