--- a/charts/vaas/templates/gateway/uploadtokenkey.yaml
+++ b/charts/vaas/templates/gateway/uploadtokenkey.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: uploadTokenKey
+  name: upload-token-key
   namespace: {{ .Release.Namespace }}
 stringData:
   {{- if .Values.gateway.uploadToken.key }}
