Create handling for upload token (#65)
* create handling for uploadtoken via secret or providing default token

* fix correct naming

* increase version

* apply naming scheme

---------

Co-authored-by: Verdict-as-a-Service Team <vaas@gdata.de>

--- a/charts/vaas/templates/gateway/statefulset.yaml
+++ b/charts/vaas/templates/gateway/statefulset.yaml
@@ -47,7 +47,10 @@ spec:
             - name: Upload__Endpoint
               value: {{.Values.gateway.uploadUrl}}
             - name: JwtSettings__Secret
-              value: {{ randAlphaNum 64 }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.gateway.uploadToken.existingSecret | default "upload-token-key" }}
+                  key: key
             - name: GDScanConfiguration__Url
               value: "http://gdscan:8080/scan/body"
             - name: RedisConfiguration__Configuration
