create zipfile and github release

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,3 +62,16 @@ jobs:
           registry_username: ${{ secrets.REGISTRY_USERNAME }}
           registry_password: ${{ secrets.CR_TOKEN }}
           update_dependencies: "true"
+
+      - name: create zipfile
+        run: zip -r vaas-helm.zip charts/vaas/
+
+      - name: Github Release
+        uses: softprops/action-gh-release@v2
+        if: github.event_name != 'pull_request' && github.ref == 'refs/heads/main'
+        with:
+          tag_name: $CHART_VERSION
+          generate_release_notes: true
+          make_latest: true
+          files: |
+            vaas-helm.zip
