fix incorrect restriction

--- a/charts/vaas/templates/gdscan/networkpolicy.yaml
+++ b/charts/vaas/templates/gdscan/networkpolicy.yaml
@@ -15,7 +15,7 @@ spec:
     - from:
         - podSelector:
             matchLabels:
-              app.kubernetes.io/name: gdscan
+              app.kubernetes.io/name: gateway
       ports:
         - port: 8080 # Upload
 {{- end }}
