--- a/charts/vaas/templates/gdscan/stateful-set.yaml
+++ b/charts/vaas/templates/gdscan/stateful-set.yaml
@@ -32,6 +32,9 @@ spec:
         {{- include "gdscan.selectorLabels" . | nindent 8 }}
     spec:
       {{- include "gdscan.imagePullSecrets" . | nindent 6 }}
+      {{- if .Values.gdscan.client.podSecurityContext.enabled }}
+      securityContext: {{- .Values.gdscan.client.podSecurityContext | toYaml | nindent 10 }}
+      {{- end }}
       containers:
         - name: {{ .Values.gdscan.client.name }}
           image: "{{ .Values.gdscan.client.image.repository }}:{{ .Values.gdscan.client.image.tag | default .Chart.AppVersion }}"
@@ -76,6 +79,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      securityContext:
-        fsGroup: 1654
 {{- end }}
