set fsGroup for all running pods and fix condition for enabled psc

--- a/charts/vaas/templates/gateway/statefulset.yaml
+++ b/charts/vaas/templates/gateway/statefulset.yaml
@@ -27,7 +27,7 @@ spec:
         - name: gateway-tmp
           emptyDir: {}
       {{- if .Values.gateway.podSecurityContext.enabled }}
-      securityContext: {{- .Values.gateway.podSecurityContext | toYaml | nindent 10 }}
+      securityContext: {{- omit .Values.gateway.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
       containers:
         - name: {{ include "gateway.name" . }}
