--- a/charts/vaas/templates/gdscan/stateful-set.yaml
+++ b/charts/vaas/templates/gdscan/stateful-set.yaml
@@ -33,7 +33,7 @@ spec:
     spec:
       {{- include "gdscan.imagePullSecrets" . | nindent 6 }}
       {{- if .Values.gdscan.client.podSecurityContext.enabled }}
-      securityContext: {{- .Values.gdscan.client.podSecurityContext | toYaml | nindent 10 }}
+      securityContext: {{- omit .Values.gdscan.client.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
       containers:
         - name: {{ .Values.gdscan.client.name }}
