update minioicd chart and add resources

--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -38,6 +38,14 @@ mini-identity-provider:
   networkPolicy:
     enabled: true
 
+  resources:
+    limits:
+      cpu: 100m
+      memory: 128Mi
+    requests:
+      cpu: 100m
+      memory: 64Mi
+
   podAnnotations: {}
   nodeSelector: {}
   tolerations: []
