--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -281,6 +281,13 @@ gdscan:
     networkPolicy:
       enabled: true
       k8sApiPort: 6443
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 64Mi      
 
 redis:
   enabled: true
