--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -275,6 +275,7 @@ gdscan:
         drop: ["ALL"]
       seccompProfile:
         type: RuntimeDefault
+    podAnnotations: {}
     enabled: true
     # every hour
     schedule: "0 * * * *"
